AddIns/Neo.AddIn.GTS/Api.cs


        [DllImport(DLL)]
        public static extern short GT_SetCrdPrm(Card card, short crd, ref TCrdPrm pCrdPrm);
        [DllImport(DLL)]
        public static extern short GT_GetCrdPrm(Card card, short crd, out TCrdPrm pCrdPrm);
        [DllImport(DLL)]
        public static extern short GT_CrdSpace(Card card, short crd, out int pSpace, short fifo);
        [DllImport(DLL)]
        public static extern short GT_CrdData(Card card, short crd, ref TCrdData pCrdData, short fifo);
        [DllImport(DLL)]
        public static extern short GT_CrdDataCircle(Card card, short crd, ref TCrdData pCrdData, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXY(Card card, short crd, int x, int y, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZ(Card card, short crd, int x, int y, int z, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZA(Card card, short crd, int x, int y, int z, int a, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYG0(Card card, short crd, int x, int y, double synVel, double synAcc, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZG0(Card card, short crd, int x, int y, int z, double synVel, double synAcc, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZAG0(Card card, short crd, int x, int y, int z, int a, double synVel, double synAcc, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcXYR(Card card, short crd, int x, int y, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcXYC(Card card, short crd, int x, int y, double xCenter, double yCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcYZR(Card card, short crd, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcYZC(Card card, short crd, int y, int z, double yCenter, double zCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcZXR(Card card, short crd, int z, int x, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcZXC(Card card, short crd, int z, int x, double zCenter, double xCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcXYZ(Card card, short crd, int x, int y, int z, double interX, double interY, double interZ, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYOverride2(Card card, short crd, int x, int y, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZOverride2(Card card, short crd, int x, int y, int z, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZAOverride2(Card card, short crd, int x, int y, int z, int a, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYG0Override2(Card card, short crd, int x, int y, double synVel, double synAcc, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZG0Override2(Card card, short crd, int x, int y, int z, double synVel, double synAcc, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZAG0Override2(Card card, short crd, int x, int y, int z, int a, double synVel, double synAcc, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcXYROverride2(Card card, short crd, int x, int y, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcXYCOverride2(Card card, short crd, int x, int y, double xCenter, double yCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcYZROverride2(Card card, short crd, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcYZCOverride2(Card card, short crd, int y, int z, double yCenter, double zCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcZXROverride2(Card card, short crd, int z, int x, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcZXCOverride2(Card card, short crd, int z, int x, double zCenter, double xCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixXYRZ(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixXYCZ(Card card, short crd, int x, int y, int z, double xCenter, double yCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixYZRX(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixYZCX(Card card, short crd, int x, int y, int z, double yCenter, double zCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixZXRY(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixZXCY(Card card, short crd, int x, int y, int z, double zCenter, double xCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixXYRZOverride2(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixXYCZOverride2(Card card, short crd, int x, int y, int z, double xCenter, double yCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixYZRXOverride2(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixYZCXOverride2(Card card, short crd, int x, int y, int z, double yCenter, double zCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixZXRYOverride2(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixZXCYOverride2(Card card, short crd, int x, int y, int z, double zCenter, double xCenter, short circleDir, double synVel, double synAcc, double velEnd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYWN(Card card, short crd, int x, int y, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZWN(Card card, short crd, int x, int y, int z, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZAWN(Card card, short crd, int x, int y, int z, int a, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYG0WN(Card card, short crd, int x, int y, double synVel, double synAcc, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZG0WN(Card card, short crd, int x, int y, int z, double synVel, double synAcc, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZAG0WN(Card card, short crd, int x, int y, int z, int a, double synVel, double synAcc, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcXYRWN(Card card, short crd, int x, int y, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcXYCWN(Card card, short crd, int x, int y, double xCenter, double yCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcYZRWN(Card card, short crd, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcYZCWN(Card card, short crd, int y, int z, double yCenter, double zCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcZXRWN(Card card, short crd, int z, int x, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcZXCWN(Card card, short crd, int z, int x, double zCenter, double xCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcXYZWN(Card card, short crd, int x, int y, int z, double interX, double interY, double interZ, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYOverride2WN(Card card, short crd, int x, int y, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZOverride2WN(Card card, short crd, int x, int y, int z, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZAOverride2WN(Card card, short crd, int x, int y, int z, int a, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYG0Override2WN(Card card, short crd, int x, int y, double synVel, double synAcc, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZG0Override2WN(Card card, short crd, int x, int y, int z, double synVel, double synAcc, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_LnXYZAG0Override2WN(Card card, short crd, int x, int y, int z, int a, double synVel, double synAcc, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcXYROverride2WN(Card card, short crd, int x, int y, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
